--- a/BlazorClient/Pages/Groups/Layout.razor
+++ b/BlazorClient/Pages/Groups/Layout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @layout MainLayout
-@inject NavigationManager NavigationManager
+@inject NavigationManager _navigationManager
 
 <div class="app">
     @Body
