--- a/BlazorClient/Pages/Account/Login.razor.css
+++ b/BlazorClient/Pages/Account/Login.razor.css
@@ -2,3 +2,12 @@
     line-height: inherit; !important;
     padding-top: 4px; !important;
 }
+
+.login-bg-image {
+    background-image: url('../assets/images/bg.png');
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: auto 100%;
+    height: 100%;
+    width: 100%;
+}
