--- a/BlazorClient/Shared/MainLayout.razor
+++ b/BlazorClient/Shared/MainLayout.razor
@@ -63,7 +63,7 @@
                     {
                         <SidebarItem>
                             <SidebarLink To="" Title="@club.Title">
-                                <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight"/>Дворец
+                                <Icon Name="IconName.Home" Margin="Margin.Is3.FromRight"/>@club.Title
                             </SidebarLink>
                         </SidebarItem>
                     }
@@ -72,10 +72,13 @@
         </Sidebar>
         <AlertCustom/>
         @Body
-
     </div>
-    <!--Sidebar-->
 }
+else
+{
+    @Body
+}
+
 
 @code {
     private bool LoggedIn => _accountService.User != null;
@@ -89,9 +92,12 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _clubs = await _clubService.GetAllAsync();
-        _userClubs = await _clubService.GetClubsByUser(_accountService.User.Id);
-        var clubsRoles = (await _clubService.GetAllAsync()).Select(cl => cl.Title).Intersect(await _userService.GetRolesAsync(_accountService.User.Id));
+        if (LoggedIn)
+        {
+            _clubs = await _clubService.GetAllAsync();
+            _userClubs = await _clubService.GetClubsByUser(_accountService.User.Id);
+            var clubsRoles = (await _clubService.GetAllAsync()).Select(cl => cl.Title).Intersect(await _userService.GetRolesAsync(_accountService.User.Id));
+        }
     }
 
     void ToggleSidebar()
